# trading

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  btc-tracker.html  docker-compose.dev.yml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
app/: __init__.py
app/api/: __init__.py  auth.py  cache.py  helpers.py  middleware.py  schemas.py  server.py
app/bot/: __init__.py  alerts.py  autopilot.py  commands.py  config.py  formatter.py  provider.py  runner.py  scheduler.py  telegram.py
app/core/: __init__.py  concurrency.py  logging.py  result.py  sqlite_store.py
app/data_sources/: base.py  generic_http.py
app/engine/: __init__.py  account_reconciliation.py  alert_dispatcher.py  anthropic_provider.py  atr_sizing.py  audit_bus.py  backtest.py  bootstrap.py  composite_observer.py  correlation.py  deepseek_provider.py  equity_curve.py  funding.py  funding_cost.py  in_out_sample.py  kelly_sizing.py  leaderboard.py  liquidation.py  live_order_pipeline.py  live_trading_guard.py  llm_cache.py  llm_context.py  llm_decision_metrics.py  llm_decision_parser.py  llm_decision_protocol.py  llm_filter.py  llm_governor.py  llm_guardrails.py  llm_technical_analysis.py  llm_types.py  metrics.py  minimax_provider.py  monitor.py  monte_carlo.py  notifier.py  ollama_provider.py  openai_provider.py  order_sync.py  order_tracker.py  orderbook_imbalance.py  (+26 more)
app/engine/simulation/: __init__.py  broker.py  engine.py  events.py  models.py
app/exchanges/: __init__.py  base.py  binance.py  binance_usdm.py  bitget_usdt_futures.py  contract_base.py  factory.py  okx.py  okx_swap.py
app/market_data/: __init__.py  catalog.py  quality.py
app/models/: __init__.py  balance.py  contract.py  market.py  order.py  position.py
app/strategies/: __init__.py  base.py  llm_analyzer.py  llm_strategy.py  sma.py
config/: __init__.py  settings.py
docs/: README.md  STATUS.md  TODO.md  alerts.md  api.md  bot.md  ci-cd.md  deployment.md  observability.md  security.md  ui-overhaul-v0.4.md
docs/adr/: 0001-live-paper-separation.md  0002-llm-frontend-modernization.md  0003-data-analysis-mode.md
docs/agents/: issue-tracker.md
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/api/: _client.test.ts  _client.ts  _types.ts  ai.ts  backtest.ts  engine.ts  market.ts  meta.ts  orders.ts  portfolio.ts  risk.ts  strategies.ts
frontend/src/components/: AIReport.test.tsx  AIReport.tsx  AppErrorBoundary.tsx  AutocompleteInput.test.tsx  AutocompleteInput.tsx  CandleChart.tsx  Card.tsx  CommandPalette.tsx  DataTable.tsx  EmptyState.tsx  EquityCurveChart.tsx  ErrorPanel.tsx  ExpandModal.tsx  KPIHero.tsx  ListRow.tsx  LoadingFallback.tsx  MarketPanel.tsx  MarketSnapshot.tsx  OrderBookDepth.css  OrderBookDepth.tsx  OrderPanel.tsx  PageHeader.tsx  ProgressBar.tsx  RiskGauge.tsx  RiskPanel.tsx  SectionPanel.tsx  Sidebar.tsx  Sparkline.tsx  Spine.tsx  StatusDrawer.test.tsx  StatusDrawer.tsx  StatusTicker.tsx  TopTicker.test.tsx  Topbar.tsx  (+2 more)
tests/: test_account_reconciliation.py  test_ai_analyze_error_kind.py  test_anthropic_provider.py  test_api_auth.py  test_app_state_registries.py  test_atr_sizing.py  test_audit_sse.py  test_backtest.py  test_backtest_endpoint.py  test_bitget_adapter.py  test_bitget_usdt_futures.py  test_bootstrap.py  test_bot.py  test_bot_autopilot.py  test_bot_endpoint.py  test_build_engine_no_keys.py  test_compact_klines.py  test_composite_observer.py  test_contract_base.py  test_contract_order_preview.py  test_correlation.py  test_correlation_engine.py  test_data_source_protocol.py  test_deepseek_minimax.py  test_equity_curve.py  test_exchange_base_and_contract.py  test_exchange_factory.py  test_exchange_priority.py  test_funding.py  test_funding_cost.py  test_generic_http_source.py  test_in_out_sample.py  test_kelly_sizing.py  test_kill_switch.py  test_leaderboard.py  test_liquidation.py  test_live_order_pipeline.py  test_live_risk_gate.py  test_live_trading_guard.py  test_llm_analysis_enhancements.py  (+72 more)
(+26 files in other folders)
