[project]
name = "web3-trading"
version = "0.1.0"
description = "Async Web3 trading system with spot and contract adapters for OKX and Binance."
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "ta-lib>=0.4.28",
    "asyncio-throttle>=1.0.2",
    "aiolimiter>=1.1.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.9.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
